# goldsrc-sdk

./: .gitignore  CMakeLists.txt
goldsrc/: CMakeLists.txt
goldsrc/common/: IDemoPlayer.h  IEngineWrapper.h  IVGuiModule.h  proto_version.h
goldsrc/common/BaseUI/: IBaseUI.h
goldsrc/common/GameUI/: CareerDefs.h  ICareerUI.h  IClientVGUI.h  IGameConsole.h  IGameUI.h  IMusicManager.h
goldsrc/common/ServerBrowser/: IServerBrowser.h
goldsrc/public/: IEngineSurface.h  engine_hlds_api.h  engine_launcher_api.h
goldsrc/public/hltv/: IProxy.h  IServer.h  IWorld.h
goldsrc/public/tier0/: basetypes.h  commonmacros.h  dbg.h  fasttimer.h  mem.h  memalloc.h  memdbgoff.h  memdbgon.h  platform.h
goldsrc/public/vgui/: VGUI_FileInputStream.h  VGUI_TextGrid.h
goldsrc/tier1/: CMakeLists.txt
goldsrc/utils/vgui/include/: VGUI_Dar.h  VGUI_SurfaceGL.h
